kubernetes/pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-deployment
  labels:
    app: shipping
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shipping
  template:
    metadata:
      labels:
        app: shipping
    spec:
      containers:
        - name: ordenes
          image: 612686574181.dkr.ecr.us-east-1.amazonaws.com/obligatorio:shipping_image
          
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
