kubernetes/services.yml
apiVersion: v1
kind: Service
metadata:
  name: shipping-service
spec:
  selector:
    app: shipping
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
